force-app/src/objects/c2g__AutoMatchRuleDetail__c.object
<CustomObject>
    <description>Stores the fields used in the auto match rules.</description>
    <fields>
        <fullName>c2g__AutoMatchRule__c</fullName>
        <description>Stores the parent Auto Match Rule</description>
        <label>Auto Match Rule</label>
        <referenceTo>c2g__AutoMatchRule__c</referenceTo>
        <relationshipLabel>Auto Match Rule Details</relationshipLabel>
        <relationshipName>AutoMatchingRuleDetails</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>c2g__MatchOperator__c</fullName>
        <description>Stores the operator used when matching field values.</description>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Equals</fullName>
                    <default>true</default>
                    <label>Equals</label>
                </value>
                <value>
                    <fullName>Greater than or equal to</fullName>
                </value>
                <value>
                    <fullName>Less than or equal to</fullName>
                </value>
                <value>
                    <fullName>Contains</fullName>
                </value>
                <value>
                    <fullName>Range</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__MatchValue__c</fullName>
        <description>Stores the value used for matching with statement fields.</description>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Priority__c</fullName>
        <description>Stores the priority of the field.</description>
        <label>Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__SourceField__c</fullName>
        <description>Field used as the source in the auto-matching rule.</description>
        <label>Source Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__TargetField__c</fullName>
        <description>Field used as the target in the auto-matching rule.</description>
        <label>Target Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Auto Match Rule Detail</label>
    <nameField>
        <displayFormat>AMRD-{0}</displayFormat>
        <label>Auto Match Rule Detail Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Auto Match Rule Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>